@@ -80,6 +80,6 @@
         <ul id="offline-list">
         </ul>
     </div>
-    <button id="arrow" onclick="toggleOffline()"></button>
+    <button id="arrow" onclick="toggleOffline()" style="display:none;" label="Show offline channels"></button>
 </body>
 </html>
