@@ -207,12 +207,12 @@ exports.addChannel = function(channel,source,rich) {
     var name = rich?channel.login:channel;
     var exists = this.channelExists(name);
     if(!exists&&!rich) {
-        data.channels[name] = new Channel('queued',source);
+        data.channels[name] = new Channel(Channel.QUEUED,source);
         exports.checkRateLimit({'name':name,'type':source.type},exports.getChannelDetails,false);
     }
     else if(!exists)
-        data.channels[name] = new Channel('full',source,channel);
-    else if(data.channels[name].status == 'queued'&&rich)
+        data.channels[name] = new Channel(Channel.FULL,source,channel);
+    else if(data.channels[name].status == Channel.QUEUED&&rich)
         data.channels[name].addRichInfo(channel);
     else
         data.channels[name].sources.setSource(source);
@@ -326,7 +326,7 @@ exports.getChannelDetails = function(source,ignoreNull) {
         url: 'http://api.justin.tv/api/channel/show/'+source.name+'.json',
         onComplete: function (response) {
             if(exports.checkResponse(response))  {
-                if(!response.json.error && exports.channelExists(source.name) && data.channels[source.name].status=='queued')
+                if(!response.json.error && exports.channelExists(source.name) && data.channels[source.name].status==Channel.QUEUED)
                     exports.addChannel(response.json,source,true);
             }
             else if(!ignoreNull) {
@@ -375,8 +375,10 @@ exports.getUsernames = function(string) {
 
 exports.query = function() {
     for(var channel in data.channels) {
-        if(data.channels[channel].status=='full')
+        if(data.channels[channel].status==Channel.FULL) {
+            data.channels[channel].status = Channel.UPDATING;
             exports.checkRateLimit(channel,exports.createQuery,true);    
+        }
     }
 };
 
@@ -414,6 +416,7 @@ exports.checkResponse = function(response) {
 
 exports.checkStatus = function(result,channel) {
     try {
+        data.channels[channel].status = Channel.FULL;
         if(result.length>0&&!data.channels[channel].live) {
             data.channels[channel].live = true;
             
@@ -552,7 +555,11 @@ Channel.prototype.name="";
 Channel.prototype.login="";
 Channel.prototype.sources=null;
 Channel.prototype.image=[];
-Channel.prototype.status='queued';
+Channel.prototype.status=0;
+
+Channel.QUEUED = 0;
+Channel.FULL = 1;
+Channel.UPDATING = 2;
 
 // constructor
 function Channel(status,source,channelObj) {
@@ -561,14 +568,14 @@ function Channel(status,source,channelObj) {
     this.urls = new Array();
     this.image = new Array();
     this.sources = new Sources(source);
-    if(status=='full') {
+    if(status==Channel.FULL) {
 		this.addRichInfo(channelObj);
     }
 }
 
 // methods
 Channel.prototype.addRichInfo=function(channelRspObj) {
-        this.status='full';
+        this.status=Channel.FULL;
         
         /*
             we need to push array elements like beckham, so we don't modify the prototype.
@@ -603,7 +610,7 @@ Channel.prototype.getArchiveUrl = function(index) {
 
 Sources.prototype.userSet = false;
 Sources.prototype.credentialsSet = false;
-Sources.prototype.usernames = [];    
+Sources.prototype.usernames = [];
     
 function Sources(source) {
     this.usernames = new Array();
