@@ -23,7 +23,7 @@
                 ],
 "name": "justintv-stream-notifications",
 "dependencies": ["api-utils", "addon-kit"],
-"version": "2.5",
+"version": "2.6",
 "lib": "lib",
 "fullName": "Justin.tv Stream Notifications",
 "main": "main",
